testdata/baselines/reference/submodule/compiler/typeArgumentInferenceApparentType1.errors.txt
typeArgumentInferenceApparentType1.ts(2,5): error TS2322: Type 'undefined' is not assignable to type 'T'.


==== typeArgumentInferenceApparentType1.ts (1 errors) ====
    function method<T>(iterable: Iterable<T>): T {
        return;
        ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'T'.
    }
    
    var res: string = method("test");